<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>recorder</name>
  <version>0.0.0</version>
  <description>Recorder meta packages</description>
  <maintainer email="aglomakin@gmail.com">Lomakin</maintainer>
  <license>some license here</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>camera_ros</exec_depend>
  <exec_depend>ros2_mpu6050</exec_depend>
  <exec_depend>ublox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
